[package]
name = "crabresume"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = "0.12.9"
serde = "1.0.214"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "crabresume"
path = "src/main.rs"
